2002-12-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Bumped revision to 1.2.0.
 include/pqxx/CachedResult.h, src/CachedResult.cxx:
  - New
 include/pqxx/compiler.h, include/pqxx/robusttransaction.h:
  - Removed constructs that looked like HTML tags but weren't.
 test/test40.cxx:
  - New
2002-11-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac:
  - Workaround for missing InvalidOid definition
2002-10-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.h, src/result.cxx:
  - Added AffectedRows() function requested by Peter Novodvorsky
 test/test13.cxx:
  - Tests Result::InsertedOid() and Result::AffectedRows()
 test/test7.cxx:
  - Tests Result::AffectedRows()
2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.h:
  - Changed Tuple constructor arg from Tuple::size_type to Result::size_type
 include/pqxx/cursor.h, include/tablereader.h, include/tablestream.h,
 include/tablewriter.h, src/cursor.cxx, src/tablereader.cxx,
 src/tablestream.cxx, src/tablewriter.cxx:
  - Constructors now take TransactionItf & instead of Transaction &
2002-10-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Fixed apparent typo (confflags defined, $conf_flags used)
2002-10-20  J.H.M. Dassen (Ray) <jdassen@debian.org> 
 autogen.sh:
  - Don't silently continue after errors.
 configure.ac:
  - Provide a description for HAVE_SYS_SELECT_H so autoheader doesn't exit with
    an error.
  - Added a few more warnings: -Wmultichar, -Wabi, -Wctor-dtor-privacy.
 debian/rules:
  - [clean] Clean out generated HTML files.
  - [configure] Actually use confflags variable; simplified testing with a 
    different C++ compiler.
 src/Makefile.am:
  - Support building outside the source directory.
2002-10-15  J.H.M. Dassen (Ray) <jdassen@debian.org>
 debian/libpqxx-dev.files: 
  - Include .la file
 debian/rules:
  - Update config.{guess,sub} from autotools-dev if possible.
  - Ensure all files installed by "make install" end up in a package.